[gd_scene load_steps=4 format=3 uid="uid://ct4cejoopabnp"]

[ext_resource type="Script" uid="uid://owav82vt5xgb" path="res://Entities/Items/antenas.gd" id="1_8bce5"]
[ext_resource type="Texture2D" uid="uid://boyalesvd2j7q" path="res://icon.svg" id="2_ahl52"]
[ext_resource type="Texture2D" uid="uid://cx6kxllhkanyo" path="res://Assets/Items/Antenna.png" id="3_fu71g"]

[node name="Antenas" type="Node2D"]
script = ExtResource("1_8bce5")

[node name="Ref" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_ahl52")

[node name="Antena1" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_fu71g")

[node name="Antena2" type="Sprite2D" parent="."]
texture = ExtResource("3_fu71g")

[node name="Antena3" type="Sprite2D" parent="."]
texture = ExtResource("3_fu71g")

[node name="Antena4" type="Sprite2D" parent="."]
texture = ExtResource("3_fu71g")

[node name="Antena5" type="Sprite2D" parent="."]
texture = ExtResource("3_fu71g")

[node name="Antena6" type="Sprite2D" parent="."]
texture = ExtResource("3_fu71g")

[node name="Antena7" type="Sprite2D" parent="."]
texture = ExtResource("3_fu71g")
